--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#">FlexBlog</a>
       </div>
 
-      <nav>
+      <nav class="menu-nav">
         <ul>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#produtos">Produtos</a></li>
@@ -37,10 +37,10 @@
           <li><a href="#qualidade">Qualidade</a></li>
         </ul>
       </nav>
-
-      <h1 class="introducao">Novos valores e<br>Propriedades de CSS</h1>
     </div>
   </header>
+
+  <h1 class="introducao">Novos valores e<br>Propriedades de CSS</h1>
 
   <section class="sobre" id="sobre">
     <div class="sobre-info">
