--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <section class="sobre" id="sobre">
     <div class="sobre-info">
       <h1>Sobre</h1>
-      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
-      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas de objetivos.</p>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas de objetivos.</p>
     </div>
 
     <div class="sobre-img">
