incluso paleta de cores

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-  <div class="superinfo-bg">
+  <div class="superinfo-bg cor-0">
     <div class="superinfo">
       <p>Seg / Sex - 08:00 às 18:00</p>
-      <a href="tel:+552199999999">+55 21 9999-9999</a>
+      <a class="cor-0" href="tel:+552199999999">+55 21 9999-9999</a>
       <p>Av. Ali perto, 330, Botafogo - RJ</p>
     </div>
   </div>
@@ -45,8 +45,8 @@
   <section class="sobre" id="sobre">
     <div class="sobre-info">
       <h1>Sobre</h1>
-      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas de objetivos.</p>
-      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas de objetivos.</p>
+      <p class="cor-3">O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas de objetivos.</p>
+      <p class="cor-3">O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas de objetivos.</p>
     </div>
 
     <div class="sobre-img">
@@ -78,9 +78,9 @@
 
   <section class="preco" id="preco">
     <div class="preco-item">
-      <h2>Cobre</h2>
+      <h2 class="cor-2">Cobre</h2>
       <span><sup>R$</sup>19</span>
-      <ul>
+      <ul class="cor-3">
         <li>Planos ilimitados</li>
         <li>Acesso restrito</li>
         <li>Conteúdo Secreto</li>
@@ -90,9 +90,9 @@
     </div>
 
     <div class="preco-item">
-      <h2>Prata</h2>
+      <h2 class="cor-2">Prata</h2>
       <span><sup>R$</sup>39</span>
-      <ul>
+      <ul class="cor-3">
         <li>Planos ilimitados</li>
         <li>Acesso restrito</li>
         <li>Conteúdo Secreto</li>
@@ -103,9 +103,9 @@
     </div>
 
     <div class="preco-item">
-      <h2>Ouro</h2>
+      <h2 class="cor-2">Ouro</h2>
       <span><sup>R$</sup>79</span>
-      <ul>
+      <ul class="cor-3">
         <li>Planos ilimitados</li>
         <li>Acesso restrito</li>
         <li>Conteúdo Secreto</li>
@@ -151,18 +151,18 @@
 
   <section class="newsletter">
     <div class="newsletter-info">
-      <h1>Newsletter</h1>
-      <p>assine e fique por dentro das novidades</p>
+      <h1 class="cor-2">Newsletter</h1>
+      <p class="cor-3">assine e fique por dentro das novidades</p>
     </div>
 
     <form class="newsletter-form">
-      <input type="text" placeholder="Seu e-mail">
-      <button type="submit">Assinar</button>
+      <input class="cor-3" type="text" placeholder="Seu e-mail">
+      <button class="cor-0" type="submit">Assinar</button>
     </form>
   </section>
 
   <footer class="footer">
-    <p>FlexBlog © Todos os direitos reservados.</p>
+    <p class="cor-6">FlexBlog © Todos os direitos reservados.</p>
   </footer>
 </body>
 
